--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "jasmine-core": "^3.3.0",
     "jasmine-marbles": "^0.4.1",
     "jasmine-spec-reporter": "^4.2.1",
-    "jsdoc": "3.5.5",
+    "jsdoc": "^3.6.2",
     "karma": "^4.0.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
